# TuxTrax

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  LICENSE  README.md  TODO.txt  audio_setup.sh  check_jack_version.py  index.html  install.sh  launch.py  main.js  main.py  package.json  renderer.js  requirements.txt  run.sh  setup.py  styles.css
.github/workflows/: docs.yml
daw_env/: pyvenv.cfg
docs/: AUDIO_SETUP.md  SETUP.md  quickstart.md
help/: core_features.txt  structure_install__bash.txt
issues/: CONTRIBUTING_issues.txt  README_issues.txt
sampler/: engine.py  waveform_editor.py
src/: main.py
src/TuxTrax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/audio/: engine.py  midi_handler.py
src/config/: default.yaml  keybindings.py  settings.py  system_settings.py
src/config/ui/: setup_wizard.py
src/config/ui/dialogs/: device_config.py
src/gui/: elektron_menu.py  main_window.py  performance_grid.py  styles.qss  transport_controls.py
src/lib/components/: TimelineItem.svelte
src/mixer/: bus_routing.py  channel_strip.py  fx_rack.py  sidechain.py
src/routes/: +page.server.js  +page.svelte
src/sampler/: adsr_envelope.py  engine.py  midi_mapper.py  waveform_editor.py
src/utils/: audio_utils.py  file_utils.py  learning_manager.py  midi_utils.py  state_manager.py
tests/: test_audio_utils.py  test_learning_manager.py
